--- a/newmain.css
+++ b/newmain.css
@@ -7,25 +7,37 @@ and open the template in the editor.
     Created on : 29-Oct-2019, 19:46:40
     Author     : Emmanuel
 */
+@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css";
+
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    background-image: url('images/GREENWICH-MAIN.png');
+    background-image: url('images/greenwich-uni.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
 }
 
 .heading {
-    padding: 20px 10px;
+    padding: 10px 10px;
     width: 100%;
     background-color: #cce5ff;
 }
 
 .heading h1 {
+    text-align: left;
+    color: black;
+}
+
+.user-heading {
+    padding: 10px 10px;
+    width: 100%;
+    background-color: #cce5ff;
+}
+.user-heading h1 {
     text-align: left;
     color: black;
 }
@@ -75,17 +87,71 @@ li a:hover {
     height: 50px;
 }
 
+.login-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 280px;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.login-box h1 {
+    font-size: 40px;
+    border-bottom: 6px solid blue;
+    margin-bottom: 20px;
+    padding: 13px 0;
+    color: white;
+}
+
+.textbox {
+    width: 150px;
+    overflow: hidden;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 8px 0;
+    border-bottom: 1px solid blue;
+}
+.textbox i {
+    width: 26px;
+    float: left;
+    text-align: center;
+    color: black;
+}
+/*.label {
+    color: white;
+}*/
+.textbox input {
+    border: none;
+    outline: none;
+    background: none;
+    color: white;
+    font-size: 18px;
+    width: 100px;
+    float:left;
+    margin: 10px;
+}
+.button {
+    width: 100%;
+    background: none;
+    border: 2px solid blue;
+    color: white;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 12px 0;
+}
 /*###################################################Login Page#############################################################*/
 
 .left-content {
-    height: 500px;
-    background-color: aqua;
+    height: 400px;
+    background-color: lightgrey;
     text-align: center;
 }
 
 .right-content {
-    height: 500px;
-    background-color: beige;
+    height: 400px;
+    background-color: lightgrey;
 }
 
 .box-1 {
@@ -115,11 +181,10 @@ li a:hover {
 /*######################################################Footer##############################################################*/
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     background-color: gray;
     width:100%;
-    /* height:100px; */
     padding: 10px 10px;
 }
 
