--- a/newmain.css
+++ b/newmain.css
@@ -19,6 +19,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    /*height: 1000px;*/
 }
 
 .heading {
@@ -83,8 +84,15 @@ li a:hover {
     border: solid red 1px;
 }
 
-.register-body {
-    height: 50px;
+.col-sm-3 {
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.login-box a {
+    color: black;
 }
 
 .login-box {
@@ -141,7 +149,7 @@ li a:hover {
     cursor: pointer;
     margin: 12px 0;
 }
-/*###################################################Login Page#############################################################*/
+/*###################################################Dashboard#############################################################*/
 
 .left-content {
     height: 400px;
@@ -177,6 +185,14 @@ li a:hover {
 .box-2 p {
     color: white;
 }
+.chan-password {
+    background-color: lightgrey;
+    height: 150px;
+}
+.email-section {
+    background-color: lightgrey;
+    height: 150px;
+}
 
 /*######################################################Footer##############################################################*/
 
@@ -199,4 +215,7 @@ footer p {
 .about-maincontent {
     height: 100px;
     background-color: aquamarine;
+}
+h1 {
+    color: white
 }
