--- a/newmain.css
+++ b/newmain.css
@@ -23,7 +23,7 @@ body {
 }
 
 .heading {
-    padding: 10px 10px;
+    padding: 20px 10px;
     width: 100%;
     background-color: #cce5ff;
 }
@@ -32,7 +32,6 @@ body {
     text-align: left;
     color: black;
 }
-
 .user-heading {
     padding: 10px 10px;
     width: 100%;
@@ -86,9 +85,22 @@ li a:hover {
 
 .col-sm-3 {
     position: absolute;
-    top: 53%;
+    top: 56%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: solid 1px red;
+    border-radius: 25px;
+    background-color: lightgrey;
+}
+.button2 {
+    width: 50%;
+    background: none;
+    border: 2px solid blue;
+    color: blue;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 12px 0;
 }
 
 .login-box a {
@@ -96,10 +108,13 @@ li a:hover {
 }
 
 .login-box {
+    border-radius: 25px;
+    border:solid 1px black;
+    background-color: lightgrey;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 280px;
+    width: 380px;
     transform: translate(-50%, -50%);
     color: white;
 }
@@ -109,7 +124,7 @@ li a:hover {
     border-bottom: 6px solid blue;
     margin-bottom: 20px;
     padding: 13px 0;
-    color: white;
+    color: black;
 }
 
 .textbox {
@@ -140,14 +155,20 @@ li a:hover {
     margin: 10px;
 }
 .button {
-    width: 100%;
+    width: 50%;
     background: none;
     border: 2px solid blue;
-    color: white;
+    color: blue;
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
     margin: 12px 0;
+    position: absolute;
+    top: 75%;
+    left: 25%;
+}
+.label {
+    color: black;
 }
 /*###################################################Dashboard#############################################################*/
 
@@ -205,9 +226,28 @@ footer {
 }
 
 footer p {
-    color: white;
+    color: black;
     text-align: center;
     text-transform: uppercase;
+}
+.fa-instagram {
+  background: transparent;
+  color: black;
+}
+.fa-youtube {
+    background: transparent;
+    color: black;
+}
+.fa-linkedin {
+    background: transparent;
+    color: black;
+}
+.fa {
+  font-size: 30px;
+  width: 50px;
+  /*text-align: center;*/
+  text-decoration: none;
+  margin: 5px 2px;
 }
 
 /*######################################################About Us Page###########################################################*/
